package eapli.base.domain.DTO;

public class JobOpeningDTO {
}
