@startuml

rectangle application{
    class JobOpening<<Aggregate Root>><<Entity>>{}

class JobOpeningProcess<<Aggregate Root>><<Entity>>{}


    class Candidate<<Aggregate Root>><<Entity>>{}

}

rectangle server{
    class Server<<Aggregate Root>><<Entity>>{}

}

Candidate "1" <-- "1"Server
JobOpeningProcess "1" --> "1"Server
JobOpening "1" --> "1"JobOpeningProcess





@enduml